5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4364/executions/1596_1015.log
== SUBMITION (2019-04-02 16:18:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=int(input())
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.145205
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:21:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.203517
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:21:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.156734
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:21:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.128612
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=(max(x,y,z())
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.219669
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:23:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=(max(x,y,z())
c=(×+z+y) - (a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.148301
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y) - (a+b)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=(max(x,y,z())
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.198212
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z())
b=(max(x,y,z())
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.211951
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 8
    b=(max(x,y,z())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z())
b=(max(x,y,z())
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.172008
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 8
    b=(max(x,y,z())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z)
b=(max(x,y,z)
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.22131
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 8
    b=(max(x,y,z)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:27:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.143828
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:41:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.172003
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:41:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.202859
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:41:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.14491
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:43:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.137488
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:43:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.144584
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:44:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(×+z+y)-(a+b)
print(a)
print(c)
print(b)


-- EXECUTION TIME:
0.183316
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(\xd7+z+y)-(a+b)
       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
